# mmm_example

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  sweep.yml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  OptimizerWidget.jsx  TransformsWidget.jsx  lib.js  styles.css
data/: config.json  geo_experiments.csv  geo_panel.csv  national_weekly.csv  spend_ladder.csv
data_sealed/: ground_truth.json
docs/: DASHBOARD_SPEC.md  DATA_SPEC.md  INFRA.md  OVERNIGHT_REPORT.md  PROTOTYPE_FINDINGS.md
docs/conditional/: index.html
docs/data/: decomposition.json  optim_draws.json  repair.json  roi.json  scorecard.json
docs/engines/: index.html
docs/ladder/: index.html
docs/process/: index.html
docs/prototype_src/: generate_data.py  ground_truth_EXAMPLE.json  smoke.py  stage2_eda.py  stage2_naive.py  (+14 more)
notebooks/: 01_data.ipynb  02_naive.ipynb  03_transforms.ipynb  04_fit.ipynb  05_evaluate.ipynb  06_experiments.ipynb  07_revenue.ipynb  08_optimize.ipynb  README.md
scripts/: build_site_pages.py  ci_matrix.py  conditional.py  engine_leaderboard.py  fit_meridian.py  fit_meta_robyn.R  fit_robyn_style.py  make_notebooks.py  make_report.py  robustness.py  run_all_engines.sh  run_conditional_sweep.sh  run_fits.sh  run_one_cell.sh  run_remote.sh  run_robustness_sweep.sh  snapshot_results.py  spend_ladder_report.py
tests/: test_datagen.py  test_geo_panel.py  test_no_truth_leak.py  test_robyn_style.py  test_run.py  test_spend_ladder.py  test_transforms.py
(+70 files in other folders)
